--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,7 +9,10 @@ serde = "1.0.215"
 serde_json = "1.0.132"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql"] }
 tokio = { version = "1.41.1", features = ["full"] }
-thiserror = "1"
+thiserror = "2.0.3"
 anyhow = "1"
+dotenvy = "0.15.7"
+env_logger = "0.11.5"
+uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
 
 [dev-dependencies]
