--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 
 [workspace]
 resolver = "1"
-members = ["core"]
+members = ["core", "seeder"]
 
-[depencies]
+[workspace.dependencies]
+chrono = {version = "0.4.38", features = ["serde"] }
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql"] }
+tokio = { version = "1.41.1", features = ["full"] }
