--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 chrono = {version = "0.4.38", features = ["serde"] }
 serde = "1.0.215"
 serde_json = "1.0.132"
-sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql"] }
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql", "uuid"] }
 tokio = { version = "1.41.1", features = ["full"] }
 thiserror = "2.0.3"
 anyhow = "1"
