--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,5 +15,6 @@ dotenvy = "0.15.7"
 env_logger = "0.11.5"
 uuid = { version = "1.11.0", features = ["v4", "v7", "serde"] }
 testcontainers = "0.23.1"
+mockall = "0.13.0"
 
 [dev-dependencies]
