--- a/seeder/Cargo.toml
+++ b/seeder/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
 core = { path = "../core" }
+env_logger = "0.11.5"
+log = "0.4.22"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql"] }
 tokio = { version = "1.41.1", features = ["full"] }
 uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
